--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webcku",
+  "name": "webclis",
   "version": "0.0.1",
   "description": "kinds of webcli",
   "main": "src/index.js",
@@ -8,7 +8,8 @@
     "release": "sh publish.sh"
   },
   "author": "kongkong99",
-  "license": "ISC",
+  "license": "MIT",
+  "repository": "https://github.com/kongkong99/webclis",
   "devDependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
