--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "fs-extra": "^9.1.0",
     "inquirer": "^7.3.3"
   },
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "commander": "^7.0.0",
+    "fs-extra": "^9.1.0",
+    "inquirer": "^7.3.3"
+  },
   "bin": {
     "webcli": "src/index.js"
   },
