--- a/src/clis/rollup-cli/package.json
+++ b/src/clis/rollup-cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rollup-cli",
   "version": "1.0.0",
+  "private": true,
   "description": "rollup base cli",
   "main": "lib/index.js",
   "module": "es/index.js",
