--- a/src/clis/vue-cli/package.json
+++ b/src/clis/vue-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tmp",
-  "version": "0.1.0",
+  "name": "vue-cli",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,29 +11,29 @@
     "analyze": "vue-cli-service build --report"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "element-ui": "^2.4.5",
-    "lodash": "^4.17.15",
-    "mockjs": "^1.1.0",
-    "vue": "^2.5.16",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.3.0",
-    "vuex-persistedstate": "^3.0.1"
+    "axios": "0.18.0",
+    "element-ui": "2.15.0",
+    "lodash": "4.17.15",
+    "mockjs": "1.1.0",
+    "vue": "2.5.16",
+    "vue-router": "3.0.0",
+    "vuex": "3.3.0",
+    "vuex-persistedstate": "3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
-    "@vue/eslint-config-airbnb": "^3.0.1",
-    "babel-plugin-component": "^1.1.1",
-    "node-sass": "^4.12.0",
-    "postcss-px2rem": "^0.3.0",
+    "@vue/cli-plugin-babel": "3.12.1",
+    "@vue/cli-plugin-eslint": "3.12.1",
+    "@vue/cli-service": "3.12.1",
+    "@vue/eslint-config-airbnb": "3.0.1",
+    "babel-plugin-component": "1.1.1",
+    "node-sass": "4.12.0",
+    "postcss-px2rem": "0.3.0",
     "postcss-px2rem-exclude": "0.0.6",
-    "px2rem-loader": "^0.1.9",
-    "sass-loader": "^8.0.0",
-    "svg-sprite-loader": "^4.2.5",
-    "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "px2rem-loader": "0.1.9",
+    "sass-loader": "8.0.0",
+    "svg-sprite-loader": "4.2.5",
+    "vue-cli-plugin-element": "1.0.1",
+    "vue-template-compiler": "2.5.16"
   },
   "browserslist": [
     "> 1%",
