Fixed an error when creating a file

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "license": "MIT",
   "repository": "https://github.com/kongkong99/webclis",
   "dependencies": {
-    "chalk": "^4.1.0",
-    "commander": "^7.0.0",
-    "execa": "^5.0.0",
-    "fs-extra": "^9.1.0",
-    "inquirer": "^7.3.3"
+    "chalk": "4.1.0",
+    "commander": "7.0.0",
+    "execa": "5.0.0",
+    "fs-extra": "9.1.0",
+    "inquirer": "7.3.3"
   },
   "bin": {
     "webcli": "src/index.js"
@@ -37,6 +37,6 @@
     "rollup"
   ],
   "devDependencies": {
-    "husky": "^4.3.8"
+    "husky": "4.3.8"
   }
 }
