--- a/src/clis/rollup-cli/package.json
+++ b/src/clis/rollup-cli/package.json
@@ -13,19 +13,21 @@
   "author": "kongkong99",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/plugin-transform-runtime": "7.12.10",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "7.9.4",
-    "@rollup/plugin-babel": "5.0.0",
-    "@rollup/plugin-commonjs": "17.0.0",
+    "@babel/core": "7.14.0",
+    "@babel/plugin-transform-runtime": "7.14.3",
+    "@babel/preset-env": "7.14.2",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "7.1.3",
+    "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.3.2",
     "babel-plugin-import": "1.13.3",
+    "chalk": "4.1.0",
     "eslint-config-airbnb": "18.2.0",
-    "rollup": "2.30.0",
-    "rollup-plugin-less": "1.1.3",
+    "execa": "5.0.0",
+    "fs-extra": "9.1.0",
+    "rollup": "2.52.1",
+    "rollup-plugin-node-polyfills": "0.2.1",
     "rollup-plugin-serve": "1.1.0",
     "rollup-plugin-terser": "7.0.2"
   },
